{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 200,
  "lineage": "4740f86d-54e1-df0f-907d-4581ea9e667d",
  "resources": [
    {
      "module": "module.Task4-ECS-Zaeem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:security-group/sg-0b0952e5a762276cb",
            "description": "Allow access from ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0952e5a762276cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c23daaf70330e2e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "task4-rds-sg",
            "name_prefix": "",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a1bacdbe68c95d8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "sg-0b0952e5a762276cb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem",
            "module.Task4-SG-Zaeem.aws_security_group.Task4-SG-Zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Task4-igw-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:internet-gateway/igw-069d1550a48769774",
            "id": "igw-069d1550a48769774",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "tags": {
              "Name": "Task4-igw-zaeem"
            },
            "tags_all": {
              "Name": "Task4-igw-zaeem"
            },
            "vpc_id": "vpc-07a1bacdbe68c95d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Task4-publicRT-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:route-table/rtb-0dcdc95f699c0c758",
            "id": "rtb-0dcdc95f699c0c758",
            "owner_id": "504649076991",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069d1550a48769774",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Task4-publicRT-zaeem"
            },
            "tags_all": {
              "Name": "Task4-publicRT-zaeem"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a1bacdbe68c95d8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "rtb-0dcdc95f699c0c758",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Task4-Network-zaeem.aws_internet_gateway.Task4-igw-zaeem",
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Task4-publicRTA-A-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013e7c7fc505e09cb",
            "region": "us-west-2",
            "route_table_id": "rtb-0dcdc95f699c0c758",
            "subnet_id": "subnet-0c17f4818a6ca789b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Task4-Network-zaeem.aws_internet_gateway.Task4-igw-zaeem",
            "module.Task4-Network-zaeem.aws_route_table.Task4-publicRT-zaeem",
            "module.Task4-Network-zaeem.aws_subnet.Task4-publicSNA-zaeem",
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Task4-publicRTA-B-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75e5515c17b8058",
            "region": "us-west-2",
            "route_table_id": "rtb-0dcdc95f699c0c758",
            "subnet_id": "subnet-029b88bd381a2683e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Task4-Network-zaeem.aws_internet_gateway.Task4-igw-zaeem",
            "module.Task4-Network-zaeem.aws_route_table.Task4-publicRT-zaeem",
            "module.Task4-Network-zaeem.aws_subnet.Task4-publicSNB-zaeem",
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Task4-publicSNA-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:subnet/subnet-0c17f4818a6ca789b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c17f4818a6ca789b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Task4-publicSN-zaeem"
            },
            "tags_all": {
              "Name": "Task4-publicSN-zaeem"
            },
            "vpc_id": "vpc-07a1bacdbe68c95d8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "subnet-0c17f4818a6ca789b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Task4-publicSNB-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:subnet/subnet-029b88bd381a2683e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029b88bd381a2683e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "504649076991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Task4-publicSN-zaeem"
            },
            "tags_all": {
              "Name": "Task4-publicSN-zaeem"
            },
            "vpc_id": "vpc-07a1bacdbe68c95d8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "subnet-029b88bd381a2683e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    },
    {
      "module": "module.Task4-Network-zaeem",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Task4-vpc-zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:vpc/vpc-07a1bacdbe68c95d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07229e041a53302d9",
            "default_route_table_id": "rtb-0bd2a1a632930ef36",
            "default_security_group_id": "sg-08c68ce9c6760af34",
            "dhcp_options_id": "dopt-04ce359903ec5a75b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a1bacdbe68c95d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd2a1a632930ef36",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "tags": {
              "Name": "Task4-vpc-zaeem"
            },
            "tags_all": {
              "Name": "Task4-vpc-zaeem"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "vpc-07a1bacdbe68c95d8",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.Task4-SG-Zaeem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Task4-SG-Zaeem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504649076991:security-group/sg-05c23daaf70330e2e",
            "description": "Security group for Task4",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c23daaf70330e2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Task4-SG-Zaeem",
            "name_prefix": "",
            "owner_id": "504649076991",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a1bacdbe68c95d8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "504649076991",
            "id": "sg-05c23daaf70330e2e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Task4-Network-zaeem.aws_vpc.Task4-vpc-zaeem"
          ]
        }
      ]
    }
  ]
}